syntax = "proto3";
option go_package = "github.com/cvetkovski98/zvax-common/gen/pbkey";

import "google/protobuf/empty.proto";

package pbkey;

service KeyGrpc {
 rpc RegisterKey(RegisterKeyRequest) returns (RegisterKeyResponse) {};
 rpc GetKey(GetKeyRequest) returns (KeyResponse) {};
 rpc GetKeys(google.protobuf.Empty) returns (GetKeysResponse) {};
}

message KeyResponse {
  int64 key_id = 1;
  string holder = 2;
  string affiliation = 3;
  string value = 4;
}

message GetKeyRequest {
  int64 key_id = 1;
}

message RegisterKeyRequest {
  string holder = 1;
  string affiliation = 2;
  string public_key = 3;
}

message RegisterKeyResponse {
  KeyResponse key = 1;
  string certificate = 2;
}

message GetKeysResponse {
  repeated KeyResponse keys = 1;
}

